@@ -13,8 +13,6 @@ import static com.hedera.services.bdd.spec.utilops.CustomSpecAssert.allRunFor;
 import static com.hedera.services.bdd.spec.utilops.UtilVerbs.assertionsHold;
 import static com.hedera.services.bdd.spec.utilops.UtilVerbs.withOpContext;
 import static com.hedera.services.bdd.suites.contract.Utils.FunctionType.CONSTRUCTOR;
-import static com.hederahashgraph.api.proto.java.HederaFunctionality.ContractCall;
-import static com.hederahashgraph.api.proto.java.SubType.DEFAULT;
 import static java.lang.System.arraycopy;
 import static java.util.Objects.requireNonNull;
 import static org.apache.commons.lang3.StringUtils.EMPTY;
@@ -27,7 +25,7 @@ import com.google.common.primitives.Ints;
 import com.google.common.primitives.Longs;
 import com.google.protobuf.ByteString;
 import com.hedera.hapi.node.base.HookCall;
-import com.hedera.node.app.hapi.fees.pricing.AssetsLoader;
+import com.hedera.node.app.hapi.utils.MiscCryptoUtils;
 import com.hedera.services.bdd.spec.HapiPropertySource;
 import com.hedera.services.bdd.spec.HapiSpec;
 import com.hedera.services.bdd.spec.HapiSpecOperation;
@@ -57,7 +55,9 @@ import java.nio.file.Path;
 import java.time.Instant;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HexFormat;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
 import java.util.function.Function;
@@ -68,9 +68,7 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.tuweni.bytes.Bytes;
 import org.apache.tuweni.bytes.Bytes32;
-import org.bouncycastle.util.encoders.Hex;
 import org.hiero.base.utility.CommonUtils;
-import org.hyperledger.besu.crypto.Hash;
 import org.json.JSONArray;
 import org.json.JSONObject;
 import org.json.JSONTokener;
@@ -84,7 +82,7 @@ public class Utils {
     private static final String JSON_EXTENSION = ".json";
 
     public static ByteString eventSignatureOf(String event) {
-        return ByteString.copyFrom(Hash.keccak256(Bytes.wrap(event.getBytes())).toArray());
+        return ByteString.copyFrom(MiscCryptoUtils.keccak256DigestOf(event.getBytes()));
     }
 
     public static ByteString parsedToByteString(long shard, long realm, long n) {
@@ -168,8 +166,8 @@ public class Utils {
 
     public static ByteString extractBytecodeUnhexed(final String path) {
         try {
-            final var bytes = Files.readAllBytes(Path.of(path));
-            return ByteString.copyFrom(Hex.decode(bytes));
+            final var string = Files.readString(Path.of(path));
+            return ByteString.copyFrom(HexFormat.of().parseHex(string));
         } catch (IOException e) {
             log.warn("An error occurred while reading file", e);
             return ByteString.EMPTY;
@@ -621,21 +619,17 @@ public class Utils {
                 .build());
     }
 
+    /** Canonical USD prices formerly loaded from the legacy {@code canonical-prices.json}. */
+    private static final Map<HederaFunctionality, Map<SubType, BigDecimal>> CANONICAL_USD_PRICES = Map.of(
+            HederaFunctionality.TokenMint,
+            Map.of(
+                    SubType.TOKEN_FUNGIBLE_COMMON, new BigDecimal("0.001"),
+                    SubType.TOKEN_NON_FUNGIBLE_UNIQUE, new BigDecimal("0.02")));
+
     public static long expectedPrecompileGasFor(
             final HapiSpec spec, final HederaFunctionality function, final SubType type) {
-        final var gasThousandthsOfTinycentPrice = spec.fees()
-                .getCurrentOpFeeData()
-                .get(ContractCall)
-                .get(DEFAULT)
-                .getServicedata()
-                .getGas();
-        final var assetsLoader = new AssetsLoader();
-        final BigDecimal hapiUsdPrice;
-        try {
-            hapiUsdPrice = assetsLoader.loadCanonicalPrices().get(function).get(type);
-        } catch (final IOException e) {
-            throw new UncheckedIOException(e);
-        }
+        final var gasThousandthsOfTinycentPrice = spec.ratesProvider().gasPriceInThousandthsOfTinycent();
+        final BigDecimal hapiUsdPrice = CANONICAL_USD_PRICES.get(function).get(type);
         final var precompileTinycentPrice = hapiUsdPrice
                 .multiply(BigDecimal.valueOf(1.2))
                 .multiply(BigDecimal.valueOf(100 * 100_000_000L))
